--- a/app/assets/stylesheets/shared/books.scss
+++ b/app/assets/stylesheets/shared/books.scss
@@ -6,7 +6,6 @@
   background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), image-url('Blueberries.jpeg');
   background-position: center;
   background-size: cover;
-  background-attachment: fixed;
 }
 
 .books-box {
@@ -45,6 +44,10 @@
   .books-box {
     flex-direction: row;
     width: 50%;
+  }
+
+  .books {
+    background-attachment: fixed;
   }
 
   .book-image-box {
